<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Powerlift</string>
    <string name="action_settings">Settings</string>

    <!-- Headings -->
    <string name="workout_a"><u>Workout A</u></string>
    <string name="workout_b"><u>Workout B</u></string>
    <string name="workout_m"><u>Workout Main</u></string>
    <string name="workout_r"><u>Workout Register</u></string>
    <string name="exercise_log"><u>Exercise Log</u></string>

    <!-- Exercises -->
    <string name="squat">Squat</string>
    <string name="bench_press">Bench Press</string>
    <string name="rows">Rows</string>
    <string name="deadlift">Deadlift</string>
    <string name="overhead_press">Overhead Press</string>
    <string name="button_done">Done!</string>

    <!-- Register -->
    <string name="exercise_name">Exercise Name</string>
    <string name="workout_id">Workout ID</string>
    <string name="workout_name">Workout Name</string>
    <string name="start_weight">Start Weight</string>
    <string name="set_accomplished">Accomplished?</string>
    <string name="button_register">Add</string>
    <string name="button_delete">Delete all</string>

    <!-- Main -->
    <string name="button_a">Show Workout A</string>
    <string name="button_b">Show Workout B</string>
    <string name="app_intro">Powerlift is an app based on the 5x5 Stronglift training program.</string>
    <string name="app_intro2">Swiping to the right will show the Workout 1 and then Workout 2 if you swipe again. You can add new exercises to your program in Workout 1 and 2 by clicking \'Add Exercise\'. </string>
    <string name="app_intro3"> When finished with an exercise just click on \'Done!\'. This will register your progress and increment the intensity of your exercise by 2.5 kg for your next workout.</string>

    <!-- Menu -->
    <string name="new_exercise">New Exercise</string>
    <string name="new_close">Close</string>
    <string name="new_reset">Reset</string>

    <!-- Workout A -->
    <string name="button_add_exe">Add New Exercise</string>

    <!-- New Exercise Dialog -->
    <string name="add_all">Add to all workouts</string>

    <!-- Exercise Info Dialog -->
    <string name="current_weight">Weight</string>
    <string name="unit">Kg</string>
    <string name="last_date">Date</string>
    <string name="bogus_date">03.08.2013 - 14:53:05</string>
    <string name="button_update">Update</string>
    <string name="button_delete_exe">Delete</string>
    <string name="sets_reps">Sets X Reps</string>
    <string name="sets_reps_x">5 X 5</string>
    <string name="increment">Increment</string>
    <string name="increment_x">2.5</string>
    
    
    
    
    
    
    
    
    
     <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    
    
    
    
    
    
    
    

</resources>