<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <AutoCompleteTextView
        android:id="@+id/ET_exercise_name_ac"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:hint="@string/exercise_name"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/ET_workout_name"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:hint="@string/workout_name"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textSize="14sp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/ET_start_weight"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:hint="@string/start_weight"
        android:inputType="numberDecimal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textSize="14sp" />

    <CheckBox
        android:id="@+id/CB_add_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_all" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="registerExercise"
            android:text="@string/button_register" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="registerExercise"
            android:text="@string/new_close" />
    </LinearLayout>

</LinearLayout>